@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 2012-07-XX  Release 7.22.2                                     ---
 ----------------------------------------------------------------------
 
+* fixed infinite loop raytracing subtracted lights - Sean Morrison
 * added hyp centroid and volume output to 'analyze' - Aaron Keesing
 * fixed random number SMP bug affecting rt and adrt - Sean Morrison
 * added support for editing 2D sketch objects in archer - Bob Parker
